# holiday-manager

./: generate_po.sh  pyproject.toml  setup.py
debian/: changelog  control  copyright  n4d-holidaymanager.install  n4d-holidaymanager.postinst  python3-holiday.postrm  python3-holidaymanager.dirs  python3-holidaymanager.install  python3-holidaymanager.pofiles  python3-holidaymanager.postinst  rules
holiday-manager/: check_holidays.py
holiday-manager/python3-holidaymanager/: HolidayBox.py  HolidayBoxTable.py  HolidayManager.py  HolidayModel.py  HolidayStack.py  settings.py
holiday-manager/python3-holidaymanager/rsrc/: Calendar.qml  ChangesDialog.qml  CustomCalendar.qml  CustomPopUp.qml  DateSelector.qml  HolidayInfo.qml  HolidayList.qml  ListDelegateDateItem.qml  holiday-manager.css  holiday-manager.ui  holiday-manager_table.ui
n4d-holidaymanager.install/etc/n4d/conf.d/: HolidayListManager  HolidayListManager.json
n4d-holidaymanager.install/usr/share/n4d/python-plugins/: HolidayListManager.py
translations/: ca@valencia.po  ca_ES.UTF-8@valencia.po  ca_ES@valencia.po  es.po  holiday-manager.pot
translations/holiday-manager/: ca@valencia.po  es.po  holiday-manager.pot
