[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "holiday-manager"
version = "0.1"
description = "API to manage holidays"
authors = [
	{ name = "Juan Ramon Pelegrina", email="juapesai@hotmail.com" },
	{ name = "LliureX Team"}
]
license = {text="GPL-3"}
urls = {repository="https://github.com/lliurex/holiday-manager"}

[tool.setuptools]
packages = ["holidaymanager"]

[tool.setuptools.package-dir]
holidaymanager = "holiday-manager/python3-holidaymanager"

[tool.setuptools.package-data]
holidaymanager = ["rsrc/*"]